--- a/spring-boot-tutorial/src/main/resources/application.properties
+++ b/spring-boot-tutorial/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDiale
 spring.datasource.url=jdbc:mysql://localhost:3306/person_example
 spring.datasource.username=personuser
 spring.datasource.password=pickpack0147
+spring.thymeleaf.cache=false
+spring.thymeleaf.suffix=.html
