--- a/spring-boot-tutorial/pom.xml
+++ b/spring-boot-tutorial/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>com.h2database</groupId>
