--- a/spring-boot-tutorial/src/main/resources/application.properties
+++ b/spring-boot-tutorial/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/chat
+spring.datasource.url=jdbc:mysql://localhost:3306/chatroom_example_4
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
