--- a/spring-boot-tutorial/pom.xml
+++ b/spring-boot-tutorial/pom.xml
@@ -8,6 +8,7 @@
         <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.example</groupId>
     <artifactId>spring-boot-tutorial</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -73,6 +74,12 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
