--- a/spring-boot-tutorial/src/main/resources/application.properties
+++ b/spring-boot-tutorial/src/main/resources/application.properties
@@ -3,8 +3,22 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/chat
+spring.datasource.url=jdbc:mysql://localhost:3306/chat_test_1
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
+
+## For file uploader/downloader
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/Users/admin/downloads
