--- a/spring-boot-tutorial/src/main/resources/application.properties
+++ b/spring-boot-tutorial/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/chatroom
+spring.datasource.url=jdbc:mysql://localhost:3306/chatt
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 
